--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -15,12 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum_list = []\n",
+    "sum_list_1 = []\n",
     "for i in range(1,1000):\n",
     "    if i%3 == 0 or i%5 == 0:\n",
-    "        sum_list.append(i)\n",
+    "        sum_list_1.append(i)\n",
     "\n",
-    "print(sum(sum_list))"
+    "print(sum(sum_list_1))"
    ]
   },
   {
