spelling mistake and problem 5

--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "unexpected-novel",
+   "id": "flexible-zoning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "selected-amendment",
+   "id": "headed-collective",
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +266,28 @@
    "source": [
     "get_largest_polindrom(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "incorporate-guatemala",
+   "metadata": {},
+   "source": [
+    "# Smallest multiple\n",
+    "\n",
+    "Problem 5\n",
+    "\n",
+    "2520 is the smallest number that can be divided by each of the numbers from 1 to 10 without any remainder.\n",
+    "\n",
+    "What is the smallest positive number that is evenly divisible by all of the numbers from 1 to 20?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "consistent-england",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
