new try for problem 5

--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -232,12 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "flexible-zoning",
+   "execution_count": 58,
+   "id": "young-wrapping",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_largest_polindrom(digits):\n",
+    "def get_largest_palindrom(digits):\n",
     "    palindrome_list = []\n",
     "    for a in range(10**(digits-1),10**digits):\n",
     "        for b in range(100,1000):\n",
@@ -248,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "headed-collective",
+   "execution_count": 59,
+   "id": "tutorial-inventory",
    "metadata": {},
    "outputs": [
     {
@@ -258,18 +258,18 @@
        "906609"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_largest_polindrom(3)"
+    "get_largest_palindrom(3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "incorporate-guatemala",
+   "id": "fifth-mexico",
    "metadata": {},
    "source": [
     "# Smallest multiple\n",
@@ -283,11 +283,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "consistent-england",
+   "execution_count": 11,
+   "id": "middle-distribution",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "smallest_number = 2520\n",
+    "n = 10\n",
+    "def divide_by_all(num):\n",
+    "    for i in range(2,21):\n",
+    "        if num % i != 0:\n",
+    "            return False\n",
+    "        return True\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "specified-organizer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "232792560.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "def gcd(a, b):\n",
+    "    while b != 0:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "\n",
+    "print(reduce(lambda a, b: a * b / gcd(a, b), range(1, 21)))"
+   ]
   }
  ],
  "metadata": {
