--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -322,13 +322,109 @@
     "\n",
     "print(reduce(lambda a, b: a * b / gcd(a, b), range(1, 21)))"
    ]
+  },
+  {
+   "source": [
+    "# problem 6\n",
+    "The sum of the squares of the first ten natural numbers is,\n",
+    "\n",
+    "The square of the sum of the first ten natural numbers is,\n",
+    "\n",
+    "Hence the difference between the sum of the squares of the first ten natural numbers and the square of the sum is\n",
+    "\n",
+    ".\n",
+    "\n",
+    "Find the difference between the sum of the squares of the first one hundred natural numbers and the square of the sum.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "print(2**2)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 3,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_of_squares(range_number):\n",
+    "    sum_of_squares_list = []\n",
+    "    for i in range(1,range_number+1):\n",
+    "        sum_of_squares_list.append(int(i)**2)\n",
+    "    sum_of_squares = sum(sum_of_squares_list)\n",
+    "    return sum_of_squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square_of_sum(range_number):\n",
+    "    square_of_sum_list = [] \n",
+    "    for i in range(1,range_number+1):\n",
+    "        square_of_sum_list.append(int(i))\n",
+    "    square_of_sum = (sum(square_of_sum_list))**2\n",
+    "    return square_of_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_square_difference(range_number_for_both):\n",
+    "    sum_square_difference = square_of_sum(range_number_for_both) - sum_of_squares(range_number_for_both)\n",
+    "    return sum_square_difference\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "25164150\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = sum_square_difference(100)\n",
+    "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('condaenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -341,6 +437,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "e8c069f25dc7dd171cfa5d4e9ee1e4e4b1fdd92c7b314b98cf77c14fb368cbe3"
   }
  },
  "nbformat": 4,
