working on problem 7

--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -325,7 +325,8 @@
   },
   {
    "source": [
-    "# problem 6\n",
+    "# Sum square difference\n",
+    "problem 6\n",
     "The sum of the squares of the first ten natural numbers is,\n",
     "\n",
     "The square of the sum of the first ten natural numbers is,\n",
@@ -411,6 +412,75 @@
    "source": [
     "test = sum_square_difference(100)\n",
     "print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "\n",
+    "# 10001st prime\n",
+    "problem 7\n",
+    "\n",
+    "By listing the first six prime numbers: 2, 3, 5, 7, 11, and 13, we can see that the 6th prime is 13.\n",
+    "\n",
+    "What is the 10 001st prime number?\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_if_prime(num):\n",
+    "    if num > 1:\n",
+    "        for i in range(2,num):\n",
+    "            if (num % i) == 0:\n",
+    "                break\n",
+    "        else:\n",
+    "            return num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def prime_list(num):\n",
+    "    primenumber_list = []\n",
+    "    check_num = 2\n",
+    "    while len(primenumber_list)<=num:\n",
+    "        primenumber_list.append(check_if_prime(check_num))\n",
+    "        check_num += 1\n",
+    "    return primenumber_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 3, None, 5, None, 7, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prime_list = prime_list(6)\n",
+    "print(prime_list)"
    ]
   },
   {
