--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,43 +444,75 @@
     "    if num > 1:\n",
     "        for i in range(2,num):\n",
     "            if (num % i) == 0:\n",
-    "                break\n",
-    "        else:\n",
-    "            return num"
+    "                return False\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "check_if_prime(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def prime_list(num):\n",
+    "def get_prime_list(num_of_primes):\n",
     "    primenumber_list = []\n",
     "    check_num = 2\n",
-    "    while len(primenumber_list)<=num:\n",
-    "        primenumber_list.append(check_if_prime(check_num))\n",
+    "    while len(primenumber_list)<=num_of_primes:\n",
+    "        if check_if_prime(check_num):\n",
+    "            primenumber_list.append(check_num)\n",
+    "        \n",
     "        check_num += 1\n",
     "    return primenumber_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prime_list = get_prime_list(6)\n",
+    "print(prime_list[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[2, 3, None, 5, None, 7, None]\n"
+      "104743\n"
      ]
     }
    ],
    "source": [
-    "prime_list = prime_list(6)\n",
-    "print(prime_list)"
+    "prime_list = get_prime_list(10001)\n",
+    "print(prime_list[10000])\n",
+    "# code takes too long! make it more efficient!"
    ]
   },
   {
