--- a/project_euler.ipynb
+++ b/project_euler.ipynb
@@ -624,6 +624,49 @@
    ]
   },
   {
+   "source": [
+    "# Special Pythagorean triplet\n",
+    "Problem 9\n",
+    "\n",
+    "\n",
+    "A Pythagorean triplet is a set of three natural numbers, a < b < c, for which,\n",
+    "a^2 + b^2 = c^2\n",
+    "\n",
+    "For example, 3^2 + 4^2 = 9 + 16 = 25 = 5^2.\n",
+    "\n",
+    "There exists exactly one Pythagorean triplet for which a + b + c = 1000.\n",
+    "Find the product abc.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "31875000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "def pytagorem_triplet():\n",
+    "    for a in range(1,1000):\n",
+    "        for b in range(1,1000):\n",
+    "            c = 1000-a-b\n",
+    "            if (a**2+b**2) == c**2:\n",
+    "                return a*b*c\n",
+    "pytagorem_triplet()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
